--- a/signin.html
+++ b/signin.html
@@ -99,32 +99,33 @@ form{
       </header>
 
 
-<form>
+<form action="signin" method="post">
   
+
 
   <div class="container">
     <label for="uname"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <input type="text" placeholder="Enter Username" name="username" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-        
-    <button type="submit" onclick="redirect()">Login</button>
+    <input type="password" placeholder="Enter Password" name="password" required>
+
+    <label for="role"><b>Role</b></label>
+    <select name="role" required>
+      <option value="user">User</option>
+      <option value="admin">Admin</option>
+    </select>
+
+    <button type="submit">Login</button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
+    <button type="button" class="cancelbtn" onclick="window.location.href='index.html'">Cancel</button>
     <span  class="psw"> <a style="color: rgba(0, 0, 0, 0.633);"  href="#">Forgot password?</a></span>
   </div>
 </form>
-<script>
-    function redirect(){
-        
-        window.location.href =  "/index.html"
-    }
-</script>
 </body>
 </html>
