--- a/signup.html
+++ b/signup.html
@@ -114,12 +114,12 @@ form{
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
         
-    <button type="submit" onclick="redirect()">REGISTAR</button>
+    <button type="submit" onclick="redirect()">REGISTER</button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
   </div>
-
+  
   <div class="container" style="background-color:#f1f1f1">
     <button type="button" class="cancelbtn">Cancel</button>
     
