Add smart context path detection - works with both ROOT and /PETCARE-1.0.0/

--- a/src/main/webapp/signin.html
+++ b/src/main/webapp/signin.html
@@ -119,6 +119,14 @@ form{
 </form>
 
 <script>
+  function getApiUrl(endpoint) {
+    const currentPath = window.location.pathname;
+    if (currentPath.includes('/PETCARE-1.0.0/')) {
+      return '/PETCARE-1.0.0' + endpoint;
+    }
+    return endpoint;
+  }
+
   document.querySelector('form').addEventListener('submit', async function(e) {
     e.preventDefault();
     
@@ -127,7 +135,7 @@ form{
     const password = formData.get('password');
     
     try {
-      const response = await fetch('/signin', {
+      const response = await fetch(getApiUrl('/signin'), {
         method: 'POST',
         headers: {
           'Content-Type': 'application/x-www-form-urlencoded'
