--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,8 +47,8 @@
 
        <div class="pimage">
        
-        <img  src="https://picsum.photos/500/500?random=1" alt="doggy">
-        <img src="https://picsum.photos/500/500?random=2" alt="cat">
+        <img  src="https://images.unsplash.com/photo-1587300003388-59208cc962cb?w=500&auto=format&fit=crop" alt="doggy">
+        <img src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?w=500&auto=format&fit=crop" alt="cat">
 
        </div>
 
@@ -77,10 +77,10 @@
            </div>
 
         <div class="service-photo">
-            <div class="pic1"><img src="https://picsum.photos/300/300?random=3" alt="pic1"></div>
-            <div class="pic1"><img src="https://picsum.photos/300/300?random=4" alt="pic1"></div>
-            <div class="pic1"><img src="https://picsum.photos/300/300?random=5" alt="pic1"></div>
-            <div class="pic1"><img src="https://picsum.photos/300/300?random=6" alt="pic1"></div>
+            <div class="pic1"><img src="https://images.unsplash.com/photo-1596492784531-6e6eb5ea9993?w=300&auto=format&fit=crop" alt="Dog grooming"></div>
+            <div class="pic1"><img src="https://images.unsplash.com/photo-1548681528-6a5c45b66b42?w=300&auto=format&fit=crop" alt="Cat care"></div>
+            <div class="pic1"><img src="https://images.unsplash.com/photo-1583337130417-3346a1be7dee?w=300&auto=format&fit=crop" alt="Happy dog"></div>
+            <div class="pic1"><img src="https://images.unsplash.com/photo-1615751072497-5f5169febe17?w=300&auto=format&fit=crop" alt="Cat grooming"></div>
         </div>
 
 
