Use Pexels URLs for dog and cat photos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,8 +47,8 @@
 
        <div class="pimage">
        
-        <img  src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?w=500&auto=format&fit=crop" alt="doggy">
-        <img src="https://images.unsplash.com/photo-1574158622682-e40e69881006?w=500&auto=format&fit=crop" alt="cat">
+        <img  src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg?auto=compress&cs=tinysrgb&w=500" alt="doggy">
+        <img src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=500" alt="cat">
 
        </div>
 
@@ -77,10 +77,10 @@
            </div>
 
         <div class="service-photo">
-            <div class="pic1"><img src="https://images.unsplash.com/photo-1558788353-f76d92427f16?w=300&auto=format&fit=crop" alt="Dog grooming"></div>
-            <div class="pic1"><img src="https://images.unsplash.com/photo-1495360010541-f48722b34f7d?w=300&auto=format&fit=crop" alt="Cat care"></div>
-            <div class="pic1"><img src="https://images.unsplash.com/photo-1552053831-71594a27632d?w=300&auto=format&fit=crop" alt="Happy dog"></div>
-            <div class="pic1"><img src="https://images.unsplash.com/photo-1529778873920-4da4926a72c2?w=300&auto=format&fit=crop" alt="Cat grooming"></div>
+            <div class="pic1"><img src="https://images.pexels.com/photos/6235663/pexels-photo-6235663.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Dog grooming"></div>
+            <div class="pic1"><img src="https://images.pexels.com/photos/4588065/pexels-photo-4588065.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Cat care"></div>
+            <div class="pic1"><img src="https://images.pexels.com/photos/1805164/pexels-photo-1805164.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Happy dog"></div>
+            <div class="pic1"><img src="https://images.pexels.com/photos/2558605/pexels-photo-2558605.jpeg?auto=compress&cs=tinysrgb&w=300" alt="Cat grooming"></div>
         </div>
 
 
